--- a/TreeWidget/CMakelists.txt
+++ b/TreeWidget/CMakelists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.1.0)
 
-project(helloworld VERSION 1.0.0 LANGUAGES CXX)
+project(TreeWidget VERSION 1.0.0 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_AUTOMOC ON)
@@ -15,11 +15,10 @@ endif()
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-add_executable(helloworld
-    mainwindow.ui
-    mainwindow.cpp
+add_executable(TreeWidget
+    widget.ui
+    widget.cpp
     main.cpp
-    resources.qrc
 )
 
-target_link_libraries(helloworld Qt5::Widgets)
+target_link_libraries(TreeWidget Qt5::Widgets)
